--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "^2.7.3",
     "vue": "^2.6.6",
+    "vue-chartjs": "^3.4.0",
     "vue-cookies": "^1.5.12",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
