--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "chart.js": "^2.7.3",
+    "vee-validate": "^2.1.7",
     "vue": "^2.6.6",
     "vue-axios": "^2.1.4",
     "vue-chartjs": "^3.4.0",
