--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -4,10 +4,8 @@ WORKDIR /app
 
 COPY . .
 
-ENV GOPATH=/app
+RUN go get -u "github.com/gorilla/handlers";\
+"github.com/gorilla/mux";\
+"github.com/gorilla/websocket";\
+"github.com/ethereum/go-ethereum;"
 
-WORKDIR /app/src
-
-EXPOSE 4000
-
-CMD ["go","run","main.go"]
