--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -7,5 +7,5 @@ COPY . .
 RUN go get -u "github.com/gorilla/handlers";\
 go get -u "github.com/gorilla/mux";\
 go get -u "github.com/gorilla/websocket";\
-go get -u "github.com/ethereum/go-ethereum;"
+go get -u "github.com/ethereum/go-ethereum"
 
