--- a/back-end/Dockerfile
+++ b/back-end/Dockerfile
@@ -7,4 +7,4 @@ COPY . .
 RUN go get -u "github.com/gorilla/handlers";\
 go get -u "github.com/gorilla/mux";\
 go get -u  "github.com/gorilla/websocket";\
-go get -u  "github.com/ethereum/go-ethereum;"
+go get -u  "github.com/ethereum/go-ethereum"
