--- a/back-end/Dockerfile
+++ b/back-end/Dockerfile
@@ -2,6 +2,8 @@ FROM golang:1.10
 
 WORKDIR /app
 
+ENV GOPATH /app
+
 RUN go get -u "github.com/gorilla/handlers";\
 go get -u "github.com/gorilla/mux";\
 go get -u  "github.com/gorilla/websocket";\
