--- a/back-end/Dockerfile
+++ b/back-end/Dockerfile
@@ -7,6 +7,7 @@ ENV GOPATH /app
 RUN go get -u "github.com/gorilla/handlers";\
 go get -u "github.com/gorilla/mux";\
 go get -u  "github.com/gorilla/websocket";\
-go get -u  "github.com/ethereum/go-ethereum"
+go get -u  "github.com/ethereum/go-ethereum" ;\
+go get -u "github.com/btcsuite/btcd/btcec";
 
 COPY . .
