--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "vue-axios": "^2.1.4",
     "vue-chartjs": "^3.4.0",
     "vue-cookies": "^1.5.12",
+    "vue-headful": "^2.0.1",
     "vue-router": "^3.0.1",
     "vue-spinner": "^1.0.3",
     "vuex": "^3.0.1",
