--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "chart.js": "^2.7.3",
     "vee-validate": "^2.1.7",
     "vue": "^2.6.6",
