--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,12 @@ services:
       - 4000
     ports:
       - "0.0.0.0:4000:4000"
+    deploy:
+      replicas:1
+    restart_policy:
+      condition: on-failure
+      delay: 2s
+      max_attempts: 10
     environment:
       - GOPATH=/app
     command: go run main.go
@@ -19,6 +25,12 @@ services:
     image: xarcher/crowd-front:latest
     depends_on:
       - backend
+    deploy:
+      replicas:1
+    restart_policy:
+      condition: on-failure
+      delay: 2s
+      max_attempts: 10
     ports:
       - "80:8080"
       - "443:8080"
@@ -30,6 +42,12 @@ services:
       - GOPATH=/app
     depends_on:
       - backend
+    deploy:
+      replicas:1
+    restart_policy:
+      condition: on-failure
+      delay: 2s
+      max_attempts: 10
     command: go run main.go -addr "open-crowd-demo.site:4000" -number 20
     networks:
       chain:
