docker build file

--- a/back-end/Dockerfile
+++ b/back-end/Dockerfile
@@ -4,10 +4,8 @@ WORKDIR /go-project/src/Percome19-Crowd-Demo/back-end
 
 ENV GOPATH /go-project
 
-RUN mkdir /go-project/bin && curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-
-ADD Gopkg.* main.go ./
-
-RUN  /go-project/bin/dep ensure
+RUN go get -u github.com/golang/dep/cmd/dep
 
 COPY . .
+
+RUN /go-project/bin/dep ensure
