--- a/back-end/Dockerfile
+++ b/back-end/Dockerfile
@@ -1,11 +1,13 @@
 FROM golang:1.10
 
-WORKDIR /go-project/src/Percome19-Crowd-Demo/back-end
+WORKDIR /go-project/src/github.com/xxRanger/Percome19-Crowd-Demo/back-end
 
 ENV GOPATH /go-project
 
-RUN go get -u github.com/golang/dep/cmd/dep
-
-COPY . .
-
-RUN /go-project/bin/dep ensure
+COPY vendor vendor/
+COPY zcrypto zcrypto/
+COPY contract contract/
+COPY appClient appClient/
+COPY user user/
+COPY etc etc/
+COPY main.go main.go/
